Fix test errors

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 $color-light: #fff;
 $color-dark: #444;
 
+
 $font-logo: 'Sacramento', cursive;
 $font-header: 'Oswald', sans-serif;
 $font-text: 'Source Sans Pro', sans-serif;
@@ -37,7 +38,7 @@ body {
   span {
     text-transform: none;
     font-weight: 400;
-    color: lighten($color-dark, 20%);
+    color: $color-dark;
   }
 }
 
