--- a/sass/style.css
+++ b/sass/style.css
@@ -25,6 +25,7 @@ body {
   font-family: "Oswald", sans-serif;
   font-weight: 600;
 }
+
 .section-title span {
   text-transform: none;
   font-weight: 400;
@@ -68,6 +69,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 .list .active {
   font-weight: bold;
 }
@@ -85,6 +87,7 @@ body {
 .post {
   display: none;
 }
+
 .post.active {
   display: block;
 }
@@ -96,6 +99,7 @@ body {
 .post-tags {
   display: flex;
 }
+
 .post-tags p {
   margin: 0 10px 0 0;
-}/*# sourceMappingURL=style.css.map */
+}
