--- a/sass/style.css
+++ b/sass/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,600|Sacramento|Source+Sans+Pro:300&subset=latin-ext");
 /* Variables */
 /* Global */
@@ -25,7 +26,6 @@ body {
   font-family: "Oswald", sans-serif;
   font-weight: 600;
 }
-
 .section-title span {
   text-transform: none;
   font-weight: 400;
@@ -69,7 +69,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .list .active {
   font-weight: bold;
 }
@@ -87,7 +86,6 @@ body {
 .post {
   display: none;
 }
-
 .post.active {
   display: block;
 }
@@ -99,7 +97,36 @@ body {
 .post-tags {
   display: flex;
 }
-
 .post-tags p {
   margin: 0 10px 0 0;
 }
+
+.tag-size-1 {
+  font-size: 80%;
+  color: #777;
+}
+
+.tag-size-2 {
+  font-size: 100%;
+  color: #555;
+}
+
+.tag-size-3 {
+  font-size: 120%;
+  color: #333;
+}
+
+.tag-size-4 {
+  font-size: 140%;
+  color: #111;
+}
+
+.tag-size-5 {
+  font-size: 160%;
+  color: #000;
+}
+
+.list.tags li {
+  display: inline-block;
+  margin-right: 10px; /* отступ между тегами */
+}/*# sourceMappingURL=style.css.map */
