--- a/sass/style.scss
+++ b/sass/style.scss
@@ -122,3 +122,34 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+
+.tag-size-1 {
+  font-size: 80%;
+  color: #777;
+}
+
+.tag-size-2 {
+  font-size: 100%;
+  color: #555;
+}
+
+.tag-size-3 {
+  font-size: 120%;
+  color: #333;
+}
+
+.tag-size-4 {
+  font-size: 140%;
+  color: #111;
+}
+
+.tag-size-5 {
+  font-size: 160%;
+  color: #000;
+}
+
+.list.tags li {
+  display: inline-block;
+  margin-right: 10px; /* отступ между тегами */
+}
