--- a/sass/style.scss
+++ b/sass/style.scss
@@ -151,5 +151,6 @@ body {
 
 .list.tags li {
   display: inline-block;
-  margin-right: 10px; /* отступ между тегами */
+  margin-right: 10px;
+  /* отступ между тегами */
 }
